--- a/cv.html
+++ b/cv.html
@@ -81,7 +81,11 @@
             <td>
                 <time>2019</time>–
             </td>
-            <td>Digital Scholarship and Instruction Librarian</td><td><a href="https://www.union.edu/schaffer-library" target="_blank">Schaffer Library</a></td><td><a href="https://www.union.edu/" target="_blank">Union College</a></td>
+            <td>Digital Scholarship and Instruction Librarian 
+                <br>
+                (Assistant Librarian I)
+            </td>
+            <td><a href="https://www.union.edu/schaffer-library" target="_blank">Schaffer Library</a></td><td><a href="https://www.union.edu/" target="_blank">Union College</a></td>
         </tr>
         <tr>
             <td>
