--- a/cv.html
+++ b/cv.html
@@ -482,7 +482,7 @@ Union College</li>
             </div>
             <div class="column col-4">
                 <div class="icons">
-                        <a href="mailto:mazeladam@gmail.com" target="_blank">
+                        <a href="mailto:amazel@protonmail.com" target="_blank">
                             <i class="far fa-envelope fa-3x"></i>
                         </a>
 
