added github desktop

--- a/cv.html
+++ b/cv.html
@@ -312,7 +312,7 @@
                 <td>Timelines</td><td>Timeline JS</td>
             </tr>
             <tr>
-                <td>Version Control</td><td>Git (basic), GitHub, Subversion</td> 
+                <td>Version Control</td><td>Git (basic), GitHub, GitHub Desktop, Subversion</td> 
             </tr>
             <tr>
                 <td>Web Scraping</td><td>Twitter Archiving Google Sheet (TAGS)</td>
