added Stanford CoreNLP to Skills

--- a/cv.html
+++ b/cv.html
@@ -306,7 +306,7 @@
                 <td>Surveys</td><td>Qualtrics XM</td>
             </tr>
             <tr>
-                <td>Text Analysis</td><td>AntConc, HathiTrust Research Center, Lexos, MALLET, Stanford Named Entity Recognizer, Stylo, Topic Modeling Tool, Voyant-Tools</td> 
+                <td>Text Analysis</td><td>AntConc, HathiTrust Research Center, Lexos, MALLET, Stanford CoreNLP, Stanford Named Entity Recognizer, Stylo, Topic Modeling Tool, Voyant-Tools</td> 
             </tr>             
             <tr>
                 <td>Timelines</td><td>Timeline JS</td>
