--- a/soelp-capstone.html
+++ b/soelp-capstone.html
@@ -29,7 +29,7 @@
             </section>
             <section class="navbar-section">
               <a href="/" class="btn btn-link">Home</a>
-              <a href="cv.html" class="btn btn-link">CV</a>
+              <a href="cv.pdf" class="btn btn-link">CV</a>
               <a href="portfolio.html" class="btn btn-link">Portfolio</a>
             </section>
           </header>
