--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
 <main class="container mainsection">        
     <div class="columns" id="center">
         <section class="column col-4 col-xl-4 col-lg-5 col-md-6 col-sm-7 col-xs-8">
-            <img src="self-portrait.jpg" class="img-responsive s-circle " alt="Head Shot of Adam Mazel">
+            <img src="headshot.jpg" class="img-responsive s-circle " alt="Head Shot of Adam Mazel">
         </section>
         <section class="column col-8 col-xl-8 col-lg-12 col-md-12 col-sm-12 col-xs-12" id="about">
             <h1>Hi, I'm Adam Mazel.</h1>
-            <p>I'll be the <!--<a href="https://www.union.edu/schaffer-library/staff-departments/adam-mazel" target="_blank">-->Digital Publishing Librarian</a> at <a href="https://www.indiana.edu/" target="_blank">Indiana University Bloomington</a> as of August 16, 2022. <!--There, I teach and facilitate traditional, digital, and open scholarship and pedagogy.--></p>
+            <p>Professionally, I'm the <a href="https://libraries.indiana.edu/adam-mazel" target="_blank">Digital Publishing Librarian</a> in the <a href="https://libraries.indiana.edu/scholarly-communication" target="_blank">Scholarly Communication Department</a> at <a href="https://libraries.indiana.edu/" target="_blank">Indiana University Bloomington Libraries</a>. My responsibilities include creating and providing a publishing service for IU documents that are not publishable by scholarly or commercial presses, sometimes called "grey literature."</p>
             
             <p>My M.S. in Library and Information Science is from Simmons University, and my Ph.D. in English Language and Literature is from the University of Michigan. I have nearly 10 years experience teaching in higher education, and my peer-reviewed articles are in <cite><a href="https://doi.org/10.1017/S1060150316000073" target="_blank">Victorian Literature and Culture</a></cite>, <cite><a href="https://doi.org/10.1353/vp.2017.0008" target="_blank">Victorian Poetry</a></cite>, and <cite><a href="https://doi.org/10.1525/ncl.2017.72.3.374" target="_blank">Nineteenth-Century Literature</a></cite>.</p>
+
+            <p>Personally, my hobbies include exercise (<a href="https://crossfitbloomington.com/" target="_blank">CrossFit</a> and running), reading (literary fiction), and cooking. I'm married to <a href="https://www.elizabethkaziunas.com/" target="_blank">Liz Kaziunas</a>.</p>
                
             </section> 
     </div>   
@@ -56,7 +58,7 @@
         <div class="columns">
             <div class="column col-8 ">
                 <p>
-                    &#169 <time>2021</time> Adam Mazel
+                    &#169 <time>2023</time> Adam Mazel
                     <br/>
                     This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
                 </p>
