--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="columns">
             <div class="column col-8 ">
                 <p>
-                    <i class="fa-solid fa-code"></i> by Adam Mazel &#169 <time>2023</time> + <a href="https://picturepan2.github.io/spectre/" target="_blank">Spectre.css</a>.
+                    <i class="fa-solid fa-code"></i> by Adam Mazel &#169 <time>2023</time> and <a href="https://picturepan2.github.io/spectre/" target="_blank">Spectre.css</a>.
                     <br/>
                     This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
                 </p>
