--- a/portfolio.html
+++ b/portfolio.html
@@ -106,9 +106,7 @@
       <div class="columns">
           <div class="column col-8">
               <p>
-                  &#169 <time>2021</time> 
-                  <br/>
-                  <i class="fa-solid fa-code"></i> by Adam Mazel <a href="https://picturepan2.github.io/spectre/" target="_blank">Spectre.css</a>.
+                  <i class="fa-solid fa-code"></i> by Adam Mazel &#169 <time>2023</time> and <a href="https://picturepan2.github.io/spectre/" target="_blank">Spectre.css</a>.
                   <br/>
                   This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
               </p>
