--- a/sum-ideas.html
+++ b/sum-ideas.html
@@ -18,6 +18,7 @@
         <link rel="manifest" href="site.webmanifest">
         <link rel="stylesheet" type="text/css" media="all" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
         <link rel="stylesheet" type="text/css" media="all" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.8.6/css/academicons.min.css"/>
+        <script src="https://kit.fontawesome.com/cf4a98f2f9.js" crossorigin="anonymous"></script>
     </head>
 
     <body class="site">
@@ -60,9 +61,7 @@
         <div class="columns">
             <div class="column col-8 ">
                 <p>
-                    &#169 <time>2021</time> Adam Mazel
-                    <br/>
-                    Hand coded using free and open source software, including <a href="https://picturepan2.github.io/spectre/" target="_blank">Spectre.css</a>.
+                    <i class="fa-solid fa-code"></i> by Adam Mazel &#169 <time>2023</time> and <a href="https://picturepan2.github.io/spectre/" target="_blank">Spectre.css</a>.
                     <br/>
                     This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
                 </p>
