--- a/data-app.html
+++ b/data-app.html
@@ -68,7 +68,7 @@
                 <p>
                     <i class="fa-solid fa-code"></i> by Adam Mazel &#169 <time>2023</time> and <a href="https://picturepan2.github.io/spectre/" target="_blank">Spectre.css</a>.
                     <br/>
-                    This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+                    <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Adam Mazel's Website</span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Adam Mazel</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
                 </p>
             </div>
             <div class="column col-4 ">
