--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
         </section>
         <section class="column col-8 col-xl-8 col-lg-12 col-md-12 col-sm-12 col-xs-12" id="about">
             <h1>Hi, I'm Adam Mazel.</h1>
-            <p>Professionally, I'm the <a href="https://libraries.indiana.edu/adam-mazel" target="_blank">Digital Publishing Librarian</a> in the <a href="https://libraries.indiana.edu/scholarly-communication" target="_blank">Scholarly Communication Department</a> at <a href="https://libraries.indiana.edu/" target="_blank">Indiana University Bloomington Libraries</a>. My responsibilities include creating and providing a publishing service for IU documents that are not publishable by scholarly or commercial presses, sometimes called "grey literature."</p>
+            <p>Professionally, I'm the <a href="https://libraries.indiana.edu/adam-mazel" target="_blank">Digital Publishing Librarian</a> in the <a href="https://libraries.indiana.edu/scholarly-communication" target="_blank">Scholarly Communication Department</a> at <a href="https://libraries.indiana.edu/" target="_blank">Indiana University Bloomington Libraries</a>. My responsibilities include creating and managing a <a href="https://libraries.indiana.edu/publishing-service-non-traditional" target="_blank"> service for IU documents that are not publishable by scholarly or commercial presses</a>.</p>
             
             <p>My M.S. in Library and Information Science is from Simmons University, and my Ph.D. in English Language and Literature is from the University of Michigan. I have nearly 10 years experience teaching in higher education, and my peer-reviewed articles are in <cite><a href="https://doi.org/10.1017/S1060150316000073" target="_blank">Victorian Literature and Culture</a></cite>, <cite><a href="https://doi.org/10.1353/vp.2017.0008" target="_blank">Victorian Poetry</a></cite>, and <cite><a href="https://doi.org/10.1525/ncl.2017.72.3.374" target="_blank">Nineteenth-Century Literature</a></cite>.</p>
 
             <p>Personally, my hobbies include exercise (<a href="https://crossfitbloomington.com/" target="_blank">CrossFit</a> and running), reading (literary fiction), and cooking. I'm married to <a href="https://www.elizabethkaziunas.com/" target="_blank">Liz Kaziunas</a>.</p>
-               
             </section> 
     </div>   
 </main>
@@ -61,7 +60,7 @@
                 <p>
                     <i class="fa-solid fa-code"></i> by Adam Mazel &#169 <time>2023</time> and <a href="https://picturepan2.github.io/spectre/" target="_blank">Spectre.css</a>.
                     <br/>
-                    This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+                    <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Adam Mazel's Website</span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Adam Mazel</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
                 </p>
             </div>
             <div class="column col-4 ">
